--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 20px;
+  font-family: sans-serif;
 }
 
 body {
@@ -15,4 +17,16 @@ body {
 #cityInput {
   height: 50px;
   font-size: 25px;
+}
+button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 4px 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px 10px;
+  cursor: pointer;
 }
